erDiagram
    usuarios ||--o{ tokens_acceso : "usuario_id"
    gestiones ||--o{ periodos : "gestion_id"
    gestiones ||--o{ cursos : "gestion_id"
    usuarios ||--o{ cursos : "docente_asesor_id"
    estudiantes ||--o{ estudiante_apoderado : "estudiante_id"
    apoderados ||--o{ estudiante_apoderado : "apoderado_id"
    estudiantes ||--o{ matriculas : "estudiante_id"
    cursos ||--o{ matriculas : "curso_id"
    usuarios ||--o{ matriculas : "registrado_por"
    matriculas ||--o{ situaciones_escolares : "matricula_id"
    usuarios ||--o{ situaciones_escolares : "registrado_por"
    cursos ||--o{ asignaciones_docentes : "curso_id"
    materias ||--o{ asignaciones_docentes : "materia_id"
    usuarios ||--o{ asignaciones_docentes : "docente_id"
    cursos ||--o{ jornadas_clase : "curso_id"
    matriculas ||--o{ asistencias : "matricula_id, curso_id"
    jornadas_clase ||--o{ asistencias : "jornada_id, curso_id"
    usuarios ||--o{ asistencias : "registrado_por"
    asignaciones_docentes ||--o{ evaluaciones : "asignacion_id, curso_id"
    cursos ||--o{ evaluaciones : "curso_id, gestion_id"
    periodos ||--o{ evaluaciones : "periodo_id, gestion_id"
    evaluaciones ||--o{ calificaciones : "evaluacion_id, curso_id"
    matriculas ||--o{ calificaciones : "matricula_id, curso_id"
    usuarios ||--o{ calificaciones : "registrado_por"
    asignaciones_docentes ||--o{ tareas : "asignacion_id, curso_id"
    evaluaciones ||--o{ tareas : "evaluacion_id, curso_id"
    tareas ||--o{ entregas_tareas : "tarea_id, curso_id"
    matriculas ||--o{ entregas_tareas : "matricula_id, curso_id"
    usuarios ||--o{ entregas_tareas : "registrado_por"
    matriculas ||--o{ registros_convivencia : "matricula_id"
    usuarios ||--o{ registros_convivencia : "registrado_por"
    matriculas ||--o{ cortes_predictivos : "matricula_id"
    cortes_predictivos ||--o{ predicciones : "corte_id"
    modelos_predictivos ||--o{ predicciones : "modelo_id"
    predicciones ||--o{ alertas : "prediccion_id"
    usuarios ||--o{ alertas : "responsable_id"
    alertas ||--o{ intervenciones : "alerta_id"
    usuarios ||--o{ intervenciones : "responsable_id"
    usuarios ||--o{ intervenciones : "aprobada_por"
    matriculas ||--o{ citaciones : "matricula_id"
    apoderados ||--o{ citaciones : "apoderado_id"
    intervenciones ||--o{ citaciones : "intervencion_id"
    usuarios ||--o{ citaciones : "registrado_por"
    citaciones ||--o{ notificaciones : "citacion_id"
    usuarios ||--o{ auditoria_cambios : "usuario_id"
